# biguasim_engine

./: .gitattributes  .gitignore  Biguasim.code-workspace  Biguasim.uproject  Makefile  README.md  pyproject.toml
AutomationTools/: bkp,cpp  generate_palette.py
AutomationTools/WorldExtractor/: MapExtractor.py  MapLoader.py  test.py  test2.py
Config/: DefaultEngine.ini
Content/: DefaultPlayerController.uasset  ExampleLevel.umap  ExampleLevel_BuiltData.uasset  HolodeckGameModeBP.uasset
Content/Config/: config.json
Content/GeneratedLevels/: RebuiltLevel.umap
Content/Materials/: AnnotationColor.uasset  M_WaterMaterial.uasset
Content/PostProcessingMaterials/: DepthEffectMaterial.uasset  DepthEffectMaterial_GLSL.uasset  DepthPlanarMaterial.uasset  Distortion.uasset  GTMaterial.uasset  LensDistortion.uasset  MF_DepthPlanar.uasset  M_AirSimRaw.uasset  M_UnderWater_PostProcess_Volume1.uasset  M_WaterFOG.uasset  M_WaterMaterial1.uasset  M_WaterMaterial2.uasset  PhysicLensDistortion.uasset  SegmentationMaterial.uasset  SensorNoise.uasset  T_CloudNoise.uasset  seg_color_palette.uasset
Content/Splash/: EdSplash.uasset  Splash.uasset  biguasim_logo.uasset  holodeck_logo.uasset
Content/Targets/: Cave.uasset  UnnamedMaterial.uasset
Source/Holodeck/: Holodeck.Build.cs
biguasim-engine-docs/: Doxyfile  Doxyfile.bak  conf.py  index.rst
biguasim-engine-docs/_static/: custom_style.css  darkmode.js  themes_override.css
biguasim-engine-docs/latex/: AbuseSensor_8cpp.tex  AbuseSensor_8cpp__incl.md5  AbuseSensor_8h.tex  AbuseSensor_8h__dep__incl.md5  AbuseSensor_8h__incl.md5  AcousticBeaconSensor_8cpp.tex  AcousticBeaconSensor_8cpp__incl.md5  AcousticBeaconSensor_8h.tex  AcousticBeaconSensor_8h__dep__incl.md5  AcousticBeaconSensor_8h__incl.md5  AddSensorCommand_8cpp.tex  AddSensorCommand_8cpp__incl.md5  AddSensorCommand_8h.tex  AddSensorCommand_8h__dep__incl.md5  AddSensorCommand_8h__incl.md5  AdjustRenderQualityCommand_8cpp.tex  AdjustRenderQualityCommand_8cpp__incl.md5  AdjustRenderQualityCommand_8h.tex  AdjustRenderQualityCommand_8h__dep__incl.md5  AdjustRenderQualityCommand_8h__incl.md5  AndroidControlSchemeMaxTorque_8cpp.tex  AndroidControlSchemeMaxTorque_8cpp__incl.md5  AndroidControlSchemeMaxTorque_8h.tex  AndroidControlSchemeMaxTorque_8h__dep__incl.md5  AndroidControlSchemeMaxTorque_8h__incl.md5  AndroidController_8cpp.tex  (+1228 more)
(+882 files in other folders)
