[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "biguasim"
version = "1.0.0"
description = "Hybrid aerial-water Vehicle Simulator"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Matheus G. Mateus" },
    { name = "Henrique Reichow" },
    { name = "NAUTEC", email = "nateucgestao@gmail.com" }
]
license = { text = "MIT License" }
requires-python = ">=3.10"
dependencies = [
    # Core
    'posix_ipc >= 1.0.0; platform_system == "Linux"',
    "numpy>=1.26.4",
    "typing-extensions>=4.12",
    # Testing / Dev
    "bz2file==0.98",
    "catkin-pkg==1.0.0",
    "contourpy==1.3.2",
    "cycler==0.12.1",
    "decorator==4.4.2",
    "distro==1.9.0",
    "docutils==0.21.2",
    "empy==4.2",
    "filelock==3.18.0",
    "fonttools==4.58.0",
    "fsspec==2025.7.0",
    "imageio==2.37.0",
    "imageio-ffmpeg==0.6.0",
    "iniconfig==2.1.0",
    "kiwisolver==1.4.8",
    "lark==1.2.2",
    "matplotlib==3.10.3",
    "moviepy==1.0.3",
    "mpmath==1.3.0",
    "networkx==3.5",
    "nvidia-cublas-cu12==12.6.4.1",
    "nvidia-cuda-cupti-cu12==12.6.80",
    "nvidia-cuda-nvrtc-cu12==12.6.77",
    "nvidia-cuda-runtime-cu12==12.6.77",
    "nvidia-cudnn-cu12==9.5.1.17",
    "nvidia-cufft-cu12==11.3.0.4",
    "nvidia-cufile-cu12==1.11.1.6",
    "nvidia-curand-cu12==10.3.7.77",
    "nvidia-cusolver-cu12==11.7.1.2",
    "nvidia-cusparse-cu12==12.5.4.2",
    "nvidia-cusparselt-cu12==0.6.3",
    "nvidia-nccl-cu12==2.26.2",
    "nvidia-nvjitlink-cu12==12.6.85",
    "nvidia-nvtx-cu12==12.6.77",
    "pillow==11.2.1",
    "pluggy==1.5.0",
    "proglog==0.1.12",
    "pynput==1.8.1",
    "pyparsing==3.2.3",
    "pytest==8.3.5",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.1.1",
    "python-xlib==0.33",
    "roma==1.5.3",
    "scikit-build==0.18.1",
    "scipy==1.15.2",
    "setuptools==79.0.1",
    "sympy==1.14.0",
    "torch==2.7.1",
    "torchaudio==2.7.1",
    "torchdiffeq==0.2.5",
    "torchvision==0.22.1",
    "tqdm==4.67.1",
    "triton==3.3.1",
    "wheel==0.45.1"
]

[project.urls]
Homepage = "https://bitbucket.org/frostlab/biguasim"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
